schema, dummydata수정 및 cors설정